# gpgpujson

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: gpu.rs  lib.rs  main.rs
src/shaders/: assemble_tape.wgsl  parent_link.wgsl  scan_compact.wgsl  scan_depth.wgsl  scan_fsm.wgsl  scan_u32.wgsl  sort.wgsl
src/shaders/multi/: assemble_tape.wgsl  fsm_propagate.wgsl  map_compact_mask.wgsl  map_depth.wgsl  map_fsm.wgsl  parent_link.wgsl  prepare_indirect.wgsl  propagate_i32.wgsl  propagate_u32.wgsl  scan_compose.wgsl  scan_compose_local.wgsl  scan_i32.wgsl  scan_i32_local.wgsl  scan_u32_local.wgsl  scatter_compact.wgsl
testdata/: hit_single.json  hits_500.json  hits_sample.json
