[package]
name = "gpgpujson"
description = "general purpose gpu json parsing"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "24.0.1"
env_logger = "0.10.1"
pollster = "0.3"
futures-intrusive = "0.5"
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
insta = "1.47.2"
